fix for intermedium size alignment

--- a/styles.css
+++ b/styles.css
@@ -1451,28 +1451,6 @@ p {
 @media (min-width: 576px) {
     .hero__container {
         grid-template-columns: 1fr;
-        text-align: center;
-    }
-
-    .hero__greeting {
-        justify-content: center;
-    }
-
-    .hero__title {
-        justify-content: center;
-    }
-
-    .hero__summary {
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .hero__cta {
-        justify-content: center;
-    }
-
-    .hero__social {
-        justify-content: center;
     }
 
     .experience-card__header {
